# My-Desktop-PDF

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
app/: CMakeLists.txt  application_context.cpp  main.cpp
app/include/mdpdf/app/: application_context.hpp
cmake/: MdpdfHelpers.cmake
core/: CMakeLists.txt
core/domain/: document_models.cpp
core/events/: event_bus.cpp
core/include/mdpdf/core/: result.hpp
core/include/mdpdf/core/domain/: document_models.hpp
core/include/mdpdf/core/events/: event_bus.hpp  event_types.hpp  i_event_bus.hpp
core/include/mdpdf/core/interfaces/: i_bookmark_repository.hpp  i_page_renderer.hpp  i_pdf_engine.hpp  i_recent_files_repository.hpp  i_text_search_service.hpp  i_text_selection_service.hpp
docs/: ARCHITECTURE.md  BUILD.md  LICENSE-NOTICE.md  PERFORMANCE.md
infrastructure/: CMakeLists.txt
infrastructure/cache/: cache_key.cpp  lru_page_cache.cpp
infrastructure/include/mdpdf/infrastructure/cache/: cache_key.hpp  lru_page_cache.hpp
infrastructure/include/mdpdf/infrastructure/logging/: logger.hpp
infrastructure/include/mdpdf/infrastructure/pdfium/: pdfium_engine.hpp  pdfium_library.hpp  pdfium_renderer.hpp  pdfium_text_search.hpp  pdfium_text_selection.hpp
infrastructure/include/mdpdf/infrastructure/persistence/: bookmark_repository.hpp  recent_files_repository.hpp  sqlite_database.hpp
infrastructure/include/mdpdf/infrastructure/threading/: render_thread_pool.hpp
infrastructure/logging/: logger.cpp
infrastructure/pdfium/: pdfium_engine.cpp  pdfium_library.cpp  pdfium_renderer.cpp  pdfium_text_search.cpp  pdfium_text_selection.cpp
infrastructure/persistence/: bookmark_repository.cpp  recent_files_repository.cpp  sqlite_database.cpp
infrastructure/persistence/migrations/: 001_init.sql
infrastructure/threading/: render_thread_pool.cpp
modules/: CMakeLists.txt
modules/document/: document_service.cpp
modules/include/mdpdf/modules/document/: document_service.hpp
modules/include/mdpdf/modules/render/: render_coordinator.hpp
modules/render/: render_coordinator.cpp
scripts/: setup_git.ps1
tests/: CMakeLists.txt
tests/core/: document_models_test.cpp  lru_page_cache_test.cpp
ui/: CMakeLists.txt
ui/include/mdpdf/ui/utils/: bitmap_utils.hpp
ui/include/mdpdf/ui/viewmodels/: document_view_model.hpp
ui/include/mdpdf/ui/views/: main_window.hpp  pdf_scroll_view.hpp
ui/utils/: bitmap_utils.cpp
ui/views/: main_window.cpp  pdf_scroll_view.cpp
